--- a/examples/monolith-chain/Cargo.toml
+++ b/examples/monolith-chain/Cargo.toml
@@ -5,5 +5,5 @@ authors = ["Cryptape Technologies <contact@cryptape.com>"]
 edition = "2018"
 
 [dependencies]
-umaru = { path = "../../umaru"}
+muta = { path = "../../muta"}
 futures = "0.1.25"
