--- a/examples/pool/Cargo.toml
+++ b/examples/pool/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Cryptape Technologies <contact@cryptape.com>"]
 edition = "2018"
 
 [dependencies]
-umaru = { path = "../../umaru", features = ["with-grpc"] }
+muta = { path = "../../muta", features = ["with-grpc"] }
 futures         = "0.1.25"
 futures-cpupool = "0.1.8"
 lazy_static = "1.2.0"
