--- a/muta/Cargo.toml
+++ b/muta/Cargo.toml
@@ -1,15 +1,17 @@
 [package]
-name = "muta-service"
+name = "muta"
 version = "0.1.0"
 authors = ["Cryptape Technologies <contact@cryptape.com>"]
 edition = "2018"
 license = "Apache-2.0"
 
 [lib]
-name = "muta_service"
+name = "muta"
 
 [dependencies]
 muta-proto = { path = "../proto" }
-failure = "0.1.3"
-futures = "0.1.25"
-bytes = "0.4.11"
+muta-service = { path = "../service" }
+muta-grpc = { path = "../grpc", optional = true }
+
+[features]
+with-grpc = ["muta-grpc"]
