--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ git:
   depth: 2
   submodules: false
 
-if: 'branch IN (master, develop, staging, trying) OR type != push OR fork = true OR tag =~ ^v'
+if: 'branch IN (master, develop) OR type != push OR fork = true OR tag =~ ^v'
 
 env:
   global:
