--- a/core/types/Cargo.toml
+++ b/core/types/Cargo.toml
@@ -5,7 +5,9 @@ authors = ["Cryptape Technologies <contact@cryptape.com>"]
 edition = "2018"
 
 [dependencies]
-bytes = "0.4.11"
+core-serialization = { path = "../serialization" }
+
 hex = "0.3.2"
 sha3 = "0.8.0"
 numext-fixed-hash = "0.1.2"
+rlp = "0.3.0"
