feat(core/serialization): Add proto file

--- a/core/serialization/Cargo.toml
+++ b/core/serialization/Cargo.toml
@@ -1,12 +1,9 @@
 [package]
-name = "muta-proto"
+name = "core-serialization"
 version = "0.1.0"
 authors = ["Cryptape Technologies <contact@cryptape.com>"]
 edition = "2018"
 license = "Apache-2.0"
-
-[lib]
-name = "muta_proto"
 
 [dependencies]
 bytes = "0.4.11"
