--- a/components/database/Cargo.toml
+++ b/components/database/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "database"
+name = "components-database"
 version = "0.1.0"
 authors = ["Cryptape Technologies <contact@cryptape.com>"]
 edition = "2018"
