--- a/core/storage/Cargo.toml
+++ b/core/storage/Cargo.toml
@@ -15,3 +15,6 @@ futures = "0.1.17"
 futures-locks = "0.3"
 prost = "0.5.0"
 byteorder = "1.3.1"
+
+[dev-dependencies]
+components-database = { path = "../../components/database" }
