--- a/core/p2p/Cargo.toml
+++ b/core/p2p/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Cryptape Technologies <contact@cryptape.com>"]
 edition = "2018"
 
 [dependencies]
-tentacle = { git = "http://github.com/nervosnetwork/p2p", rev = "78fbdaa" }
+tentacle = "0.2.0-alpha.1"
 env_logger = "0.6.1"
 log = "0.4.6"
 futures = "0.1.25"
