--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ members = [
   "core/storage",
   "core/p2p",
   "core/evm",
+  "core/crypto",
 
   "components/transaction-pool",
   "components/database",
