--- a/core/runtime/Cargo.toml
+++ b/core/runtime/Cargo.toml
@@ -7,6 +7,7 @@ license = "Apache-2.0"
 
 [dependencies]
 core-types = { path = "../types" }
+core-crypto = { path = "../crypto" }
 
 failure = "0.1.3"
 futures = "0.1.17"
