--- a/core/p2p/Cargo.toml
+++ b/core/p2p/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2018"
 
 [dependencies]
 tentacle = "0.2.0-alpha.1"
+tentacle-discovery = "0.1.0"
+tentacle-identify = "0.1.0"
+tentacle-ping = "0.2.0"
+generic-channel = { version = "0.2.0", features = [ "futures" ] }
 env_logger = "0.6.1"
 log = "0.4.6"
 futures = "0.1.25"
@@ -17,6 +21,7 @@ prost = { version = "0.5.0", optional = true }
 [dev-dependencies]
 prost-derive = { version = "0.5.0" }
 tokio = "0.1.16"
+rand = "0.6.5"
 
 [features]
 default = []
