--- a/components/executor/Cargo.toml
+++ b/components/executor/Cargo.toml
@@ -1,7 +1,25 @@
 [package]
-name = "executor"
+name = "components-executor"
 version = "0.1.0"
 authors = ["Cryptape Technologies <contact@cryptape.com>"]
 edition = "2018"
 
 [dependencies]
+core-runtime = { path = "../../core/runtime" }
+core-storage = { path = "../../core/storage" }
+core-types = { path = "../../core/types" }
+
+logger = { path = "../../common/logger" }
+
+cita-vm = { git = "https://github.com/mohanson/cita-vm.git", branch = "executive-squashed" }
+
+# cita-vm = { path = "../../../cita-vm" }
+
+log = "0.4.0"
+futures = "0.1.17"
+ethereum-types = "0.4"
+hex = "0.3.2"
+cita_trie = "0.2.0"
+
+[dev-dependencies]
+core-crypto = { path = "../../core/crypto" }
