--- a/core/runtime/Cargo.toml
+++ b/core/runtime/Cargo.toml
@@ -12,3 +12,6 @@ core-crypto = { path = "../crypto" }
 failure = "0.1.3"
 futures = "0.1.17"
 bytes = "0.4.11"
+
+# cita-vm = { path = "../../../cita-vm" }
+cita-vm = { git = "https://github.com/mohanson/cita-vm.git", branch = "executive-squashed" }
