--- a/core/types/Cargo.toml
+++ b/core/types/Cargo.toml
@@ -10,4 +10,9 @@ core-serialization = { path = "../serialization" }
 hex = "0.3.2"
 sha3 = "0.8.0"
 numext-fixed-hash = "0.1.2"
+numext-fixed-uint = "0.1.2"
 rlp = "0.3.0"
+ethbloom = "0.6.2"
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
