--- a/components/database/Cargo.toml
+++ b/components/database/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2018"
 [dependencies]
 core-runtime = { path = "../../core/runtime" }
 
+logger = { path = "../../common/logger" }
+
+log = "0.4.0"
 failure = "0.1.3"
 futures = "0.1.17"
 futures-locks = "0.3"
+rocksdb = "0.12.0"
