--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ logger = { path = "common/logger" }
 
 transaction-pool = { path = "components/transaction-pool" }
 components-database = { path = "components/database" }
-cita-jsonrpc = { path = "components/cita-jsonrpc" }
+components-cita-jsonrpc = { path = "components/cita-jsonrpc" }
 core-storage = { path = "core/storage" }
 core-p2p = { path = "core/p2p" }
 
