--- a/components/cita-jsonrpc/Cargo.toml
+++ b/components/cita-jsonrpc/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cita-jsonrpc"
+name = "components-cita-jsonrpc"
 version = "0.1.0"
 authors = ["Cryptape Technologies <contact@cryptape.com>"]
 edition = "2018"
