--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 config = { path = "common/config" }
 logger = { path = "common/logger" }
 
-transaction-pool = { path = "components/transaction-pool" }
+components-transaction-pool = { path = "components/transaction-pool" }
 components-database = { path = "components/database" }
 components-cita-jsonrpc = { path = "components/cita-jsonrpc" }
 core-storage = { path = "core/storage" }
