--- a/components/transaction-pool/Cargo.toml
+++ b/components/transaction-pool/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "transaction-pool"
+name = "components-transaction-pool"
 version = "0.1.0"
 authors = ["Cryptape Technologies <contact@cryptape.com>"]
 edition = "2018"
