--- a/core/consensus/Cargo.toml
+++ b/core/consensus/Cargo.toml
@@ -1,7 +1,19 @@
 [package]
-name = "consensus"
+name = "core-consensus"
 version = "0.1.0"
 authors = ["Cryptape Technologies <contact@cryptape.com>"]
 edition = "2018"
 
 [dependencies]
+core-storage = { path = "../storage" }
+core-runtime = { path = "../runtime" }
+core-types = { path = "../types" }
+core-crypto = { path = "../crypto" }
+core-merkel = { path = "../merkel" }
+
+log = "0.4.0"
+futures = "0.1.17"
+futures-locks = "0.3.3"
+
+[dev-dependencies]
+tokio = "0.1.18"
