--- a/core/merkle/Cargo.toml
+++ b/core/merkle/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "core-merkel"
+name = "core-merkle"
 version = "0.1.0"
 authors = ["Cryptape Technologies <contact@cryptape.com>"]
 edition = "2018"
@@ -7,4 +7,4 @@ edition = "2018"
 [dependencies]
 core-types = { path = "../types" }
 
-static_merkel_tree = "1.0.0"
+static_merkle_tree = "1.0.0"
