--- a/common/config-parser/Cargo.toml
+++ b/common/config-parser/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "config"
+name = "config-parser"
 version = "0.1.0"
 authors = ["Cryptape Technologies <contact@cryptape.com>"]
 edition = "2018"
