--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,18 +8,23 @@ edition = "2018"
 config-parser = { path = "common/config-parser" }
 logger = { path = "common/logger" }
 
-components-transaction-pool = { path = "components/transaction-pool" }
-components-database = { path = "components/database" }
 components-cita-jsonrpc = { path = "components/cita-jsonrpc" }
-core-storage = { path = "core/storage" }
-core-p2p = { path = "core/p2p" }
+components-database = { path = "components/database" }
+components-executor = { path = "components/executor" }
+components-transaction-pool = { path = "components/transaction-pool" }
 core-crypto = { path = "core/crypto" }
+core-p2p = { path = "core/p2p" }
+core-runtime = { path = "core/runtime" }
+core-storage = { path = "core/storage" }
+core-types = { path = "core/types" }
 
 tokio = "0.1.18"
 clap = "2.32"
 log = "0.4.0"
 serde = "1.0"
 serde_derive = "1.0"
+serde_json = "1.0"
+futures = "0.1.17"
 
 [workspace]
 members = [
