--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,14 +17,16 @@ core-p2p = { path = "core/p2p" }
 core-runtime = { path = "core/runtime" }
 core-storage = { path = "core/storage" }
 core-types = { path = "core/types" }
+core-consensus = { path = "core/consensus" }
 
+hex = "0.3.2"
+futures = "0.1.17"
 tokio = "0.1.18"
 clap = "2.32"
 log = "0.4.0"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
-futures = "0.1.17"
 
 [workspace]
 members = [
