--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,12 @@ alias:
     <<: *restore-clippy-cache
     paths: ~/muta/target
 
+  - &before-restore-security-audit-cache
+    name: Before Restore Security Audit Cache
+    command: |
+        ver=$(cargo search cargo-audit | grep "^cargo-audit = " | awk '{ print $3 }' | tr -d '"')
+        date +"${ver}~%Y-%U" | tee /opt/.cargo/cargo-audit.version
+
   - &restore-security-audit-cache
     key: audit-{{ checksum "/opt/.cargo/cargo-audit.version" }}
 
@@ -36,18 +42,28 @@ alias:
     paths:
       - /opt/.cargo/bin/cargo-audit
 
-  - &before-restore-security-audit-cache
-    name: Before Restore Security Audit Cache
+  - &before-restore-sweep-cache
+    name: Before Restore Sweep Cache
     command: |
-        ver=$(cargo search cargo-audit | grep "^cargo-audit = " | awk '{ print $3 }' | tr -d '"')
-        date +"${ver}~%Y-%U" | tee /opt/.cargo/cargo-audit.version
+        ver=$(cargo search cargo-sweep | grep "^cargo-sweep = " | awk '{ print $3 }' | tr -d '"')
+        date +"${ver}~%Y-%U" | tee /opt/.cargo/cargo-sweep.version
+
+  - &restore-sweep-cache
+    key: sweep-{{ checksum "/opt/.cargo/cargo-sweep.version" }}
+
+  - &save-sweep-cache
+    <<: *restore-sweep-cache
+    paths:
+      - /opt/.cargo/bin/cargo-sweep
 
   - &restore-release-cache
     key: release-{{ .Environment.CIRCLE_SHA1 }}
 
-  - &save-release-cache
-    <<: *restore-release-cache
-    paths: ~/muta/target/release-cache
+  - &after-restore-release-cache
+    name: After Restore Release Cache
+    command: |
+        rm -rf target/install
+        mv -vf target/release-cache target/install
 
   - &before-save-release-cache
     name: Before Save Release Cache
@@ -55,11 +71,13 @@ alias:
         rm -rf target/release-cache
         mv -vf target/install target/release-cache
 
-  - &after-restore-release-cache
-    name: After Restore Release Cache
-    command: |
-        rm -rf target/install
-        mv -vf target/release-cache target/install
+  - &save-release-cache
+    <<: *restore-release-cache
+    paths: ~/muta/target/release-cache
+
+  - &before-restore-build-cache
+    name: Before Restore Build Cache
+    command: date +"%Y-%U" | tee ~/build-cache.key
 
   - &restore-build-cache
     key: build-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "~/build-cache.key" }}
@@ -68,17 +86,39 @@ alias:
       - build-{{ .Environment.CIRCLE_BRANCH }}-
       - build-
 
+  - &before-save-build-cache
+    name: Before Save Build Cache
+    command: rm -rf target/install target/release-cache
+
   - &save-build-cache
     <<: *restore-build-cache
     paths: ~/muta/target
 
-  - &before-restore-build-cache
-    name: Before Restore Build Cache
-    command: date +"%Y-%U" | tee ~/build-cache.key
+  - &clean-build-cache-if-too-large
+    name: Clean Cache If Too Large
+    command: |
+        target_mb=$(du -sm ~/muta/target/ | awk '{ print $1 }')
+        if [ ${target_mb} -gt 2047 ]; then
+            echo "[Info ] The target has ${target_mb} MiBytes data, CLEAN them."
+            cargo clean
+        else
+            echo "[Info ] The target has ${target_mb} MiBytes data, SKIP them."
+        fi
 
-  - &before-save-build-cache
-    name: Before Save Build Cache
-    command: rm -rf target/install target/release-cache
+  - &shout-out-if-cargo-lock-diff
+    name: Shout out if cargo lock diff after build
+    command: |
+      if [ $(git status --short Cargo.lock | wc -l) -ne 0 ]; then
+          echo "[Error] Please update Cargo.lock BEFORE commit."
+          git diff Cargo.lock
+          exit 1
+      fi
+
+  - &before-restore-tarpaulin-cache
+    name: Before Restore Tarpaulin Cache
+    command: |
+      ver=$(cargo search cargo-tarpaulin | grep "^cargo-tarpaulin = " | awk '{ print $3 }' | tr -d '"')
+      date +"${ver}~%Y-%U" | tee /opt/.cargo/cargo-tarpaulin.version
 
   - &restore-tarpaulin-cache
     key: tarpaulin-{{ checksum "/opt/.cargo/cargo-tarpaulin.version" }}
@@ -88,64 +128,68 @@ alias:
     paths:
     - /opt/.cargo/bin/cargo-tarpaulin
 
-  - &before-restore-tarpaulin-cache
-    name: Before Restore Tarpaulin Cache
-    command: |
-      ver=$(cargo search cargo-tarpaulin | grep "^cargo-tarpaulin = " | awk '{ print $3 }' | tr -d '"')
-      date +"${ver}~%Y-%U" | tee /opt/.cargo/cargo-tarpaulin.version
-
-  - &clean-build-cache-if-too-large
-    name: Clean Cache If Too Large
-    command: |
-        target_mb=$(du -sm ~/muta/target/ | awk '{ print $1 }')
-        if [ ${target_mb} -gt 2048 ]; then
-            echo "[Info ] The target has ${target_mb} MiBytes data, CLEAN them."
-            cargo clean
-        else
-            echo "[Info ] The target has ${target_mb} MiBytes data, SKIP them."
-        fi
-
   - &job-default
     docker:
       - image: cita/cita-build:ubuntu-18.04-20190304
     working_directory: ~/muta
-    resource_class: medium
+    resource_class: large
 
-  - &job-build
+version: 2
+jobs:
+  build:
     <<: *job-default
+    environment:
+      FMT: true
+      CHECK: true
+    steps:
+      # checkout source code
+      - restore_cache: *restore-source-codes-cache
+      - checkout
+      - save_cache: *save-source-codes-cache
+      # dependencies and build
+      - restore_cache: *restore-dependencies-cache
+      - run: *before-restore-build-cache
+      - restore_cache: *restore-build-cache
+      - run: *before-restore-sweep-cache
+      - restore_cache: *restore-sweep-cache
+      - run:
+          name: install
+          command: ./devtools/ci/install.sh
+          no_output_timeout: 20m
+      - run:
+          name: build
+          command: ./devtools/ci/script.sh
+          no_output_timeout: 20m
+      - save_cache: *save-dependencies-cache
+      - save_cache: *save-sweep-cache
+      - run: *before-save-build-cache
+      # already do 'cargo sweep' inside devtools/ci/script.sh
+      # - run: *clean-build-cache-if-too-large
+      - save_cache: *save-build-cache
+      # already check inside devtools/ci/script.sh
+      # - run: *shout-out-if-cargo-lock-diff
+
+  test:
+    <<: *job-default
+    environment:
+      TEST: true
     steps:
       - restore_cache: *restore-source-codes-cache
       - restore_cache: *restore-dependencies-cache
       - run: *before-restore-build-cache
       - restore_cache: *restore-build-cache
-
-version: 2
-jobs:
-  "build-check":
-    <<: *job-build
-    environment:
-      FMT: true
-      CHECK: true
-      TEST: true
-    steps:
+      - run: *before-restore-sweep-cache
+      - restore_cache: *restore-sweep-cache
       - run:
-        name: run check
-        command: devtools/ci/script.sh
-
-  "passed":
-    docker:
-      - image: alpine:latest
-    steps:
-      - run:
-          name: Passed
-          command: exit 0
+          name: test
+          command: ./devtools/ci/script.sh
+          no_output_timeout: 20m
 
 workflows:
   version: 2
-  "build && check":
+  build_and_check:
     jobs:
-      - "build-check"
-
-      - "passed":
+      - build
+      - test:
           requires:
-            - "build-check"
+            - build
