Implement network component (#76)
* feat(network): implement network component

* feat(network): allow config p2p service before launch

* chore(network): strip `P2P` from p2p module struct

* chore(network): rename `Worker` to `Task`

* feat(network): add demo example

* fix(network): typo default `listening_address` comment in config

* doc(network): add shutdown todo

* chore(network): move `service_worker`, `transmit_worker` to `service`

* chore(network): enforce explicit `bootstrap_addresses`

Empty `bootstrap_addresses` is allowed, but explicitly set it in config
file is better.

* chore(network): remove useless deps

* fix(network): "common/config" not found

It's `config-parser` now.

* chore(network): commit updated Cargo.lock

* chore(network/p2p): rename examples

fix name confliction warning

--- a/components/network/Cargo.toml
+++ b/components/network/Cargo.toml
@@ -1,7 +1,23 @@
 [package]
-name = "network"
+name = "components-network"
 version = "0.1.0"
 authors = ["Cryptape Technologies <contact@cryptape.com>"]
 edition = "2018"
 
 [dependencies]
+core-p2p = { path = "../../core/p2p", features = ["prost-message"] }
+core-types = { path = "../../core/types" }
+
+config-parser = { path = "../../common/config-parser" }
+
+tentacle = "0.2.0-alpha.1"
+log = "0.4.6"
+futures = "0.1.25"
+prost = "0.5.0"
+bytes = "0.4.12"
+tokio = "0.1.18"
+serde_derive = "1.0.89"
+serde = "1.0.89"
+
+[dev-dependencies]
+env_logger = "0.6.1"
