--- a/components/network/Cargo.toml
+++ b/components/network/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 core-p2p = { path = "../../core/p2p", features = ["prost-message"] }
 core-types = { path = "../../core/types" }
+core-serialization = { path = "../../core/serialization" }
 
 config-parser = { path = "../../common/config-parser" }
 
