--- a/components/executor/Cargo.toml
+++ b/components/executor/Cargo.toml
@@ -9,14 +9,12 @@ core-runtime = { path = "../../core/runtime" }
 core-storage = { path = "../../core/storage" }
 core-types = { path = "../../core/types" }
 
-cita-vm = { git = "https://github.com/mohanson/cita-vm.git", branch = "apirefine" }
-# cita-vm = { path = "../../../cita-vm" }
-
-log = "0.4.0"
-futures = "0.1.17"
+cita-vm = "0.1"
+log = "0.4"
+futures = "0.1"
 ethereum-types = "0.4"
-hex = "0.3.2"
-cita_trie = "0.2.1"
+hex = "0.3"
+cita_trie = "0.2"
 
 [dev-dependencies]
 core-crypto = { path = "../../core/crypto" }
