--- a/core/types/Cargo.toml
+++ b/core/types/Cargo.toml
@@ -7,12 +7,13 @@ edition = "2018"
 [dependencies]
 core-serialization = { path = "../serialization" }
 
-hex = "0.3.2"
-sha3 = "0.8.0"
-numext-fixed-hash = "0.1.4"
-numext-fixed-uint = "0.1.4"
-rlp = "0.3.0"
-ethbloom = "0.6.2"
+hex = "0.3"
+sha3 = "0.8"
+numext-fixed-hash-core = "0.1"
+numext-fixed-hash = "0.1"
+numext-fixed-uint = "0.1"
+rlp = "0.3"
+ethbloom = "0.6"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
