Enable async/await syntax for transaction-pool (#130)
* chore(rust-toolchain): set to 'nightly-2019-02-27'

This is the latest version contains clippy.

* chore(transaction-pool): enable async/await syntax

* style(transaction-pool): fmt using stable rustfmt

* chore(rust-toolchain): use nightly in root rust-toolchain

fix futures create compilation in ci

* fix: clippy warnnings

--- a/components/transaction-pool/Cargo.toml
+++ b/components/transaction-pool/Cargo.toml
@@ -13,6 +13,7 @@ core-storage = { path = "../../core/storage" }
 failure = "0.1"
 futures = "0.1"
 futures-locks = "0.3"
+tokio-async-await = { version = "0.1", features = [ "async-await-preview" ] }
 
 [dev-dependencies]
 components-database = { path = "../database" }
