Move out serialization codes from types (#136)
* Move out serialization codes from types

* Flow review

* Rename Pbxxx to Serxxx

--- a/core/serialization/Cargo.toml
+++ b/core/serialization/Cargo.toml
@@ -11,5 +11,7 @@ futures = "0.1"
 prost = "0.5"
 prost-derive = "0.5"
 
+core-types = { path = "../types" }
+
 [build-dependencies]
 prost-build = "0.5"
