Dynamic link rocksdb (#134)
* chore(Makefile): support dynamic link to system rocksdb

Avoid compile rocksdb ourselves.

* chore(Makefile): support '/usr/lib' path

* chore(circleci): replace docker image to rocksdb version

* chore(circleci): try reduce resource_class to 'medium+'

* chore(circleci): use system rocksdb instead of compiling one

Set 'ROCKSDB_LIB_DIR'

* chore(Makefile): use `env` to set `ROCKSDB_LIB_DIR`

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -130,9 +130,9 @@ alias:
 
   - &job-default
     docker:
-      - image: cita/cita-build:ubuntu-18.04-20190304
+      - image: cita/cita-build:ubuntu-18.04-20190304-rocksdb
     working_directory: ~/muta
-    resource_class: large
+    resource_class: medium+
 
 version: 2
 jobs:
@@ -141,6 +141,7 @@ jobs:
     environment:
       FMT: true
       CHECK: true
+      USE_SYS_ROCKSDB: true
     steps:
       # checkout source code
       - restore_cache: *restore-source-codes-cache
@@ -173,6 +174,7 @@ jobs:
     <<: *job-default
     environment:
       TEST: true
+      USE_SYS_ROCKSDB: true
     steps:
       - restore_cache: *restore-source-codes-cache
       - restore_cache: *restore-dependencies-cache
