--- a/core/serialization/Cargo.toml
+++ b/core/serialization/Cargo.toml
@@ -7,9 +7,9 @@ license = "Apache-2.0"
 
 [dependencies]
 bytes = "0.4"
-futures = "0.1"
 prost = "0.5"
 prost-derive = "0.5"
+futures-preview = { version = "0.3.0-alpha.13" }
 
 core-types = { path = "../types" }
 
