--- a/core/storage/Cargo.toml
+++ b/core/storage/Cargo.toml
@@ -10,9 +10,10 @@ core-runtime = { path = "../runtime" }
 core-serialization = { path = "../serialization" }
 
 bytes = "0.4"
-failure = "0.1"
-futures = "0.1"
+old_futures = { package = "futures", version = "0.1" }
+futures-preview = { version = "0.3.0-alpha.13", features = [ "compat" ] }
 byteorder = "1.3"
+tokio-async-await = { version = "0.1", features = [ "async-await-preview" ] }
 
 [dev-dependencies]
 components-database = { path = "../../components/database" }
