feat(pubsub): Implement pubsub components (#143)
* feat(pubsub): implement pubsub component

* fix(pubsub): pubsub `Receiver` doesn't contain uuid

It's required to `unsubscribe`.

* fix(pubsub): clippy warnings

* chore(pubsub): remove unused tokio dep

* fix(pubsub): circle-ci failure

Update Cargo.lock and Cargo.toml

* chore(pubsub): move to core

* chore(pubsub): add 'deny(missing_debug_implementations)'

* doc(pubsub): add documents

* fix(pubsub): ci failure on comments code

Add `text` attribute

* test(pubsub): add broadcast unit tests

* chore(pubsub): remove `core-types` crate from doc test and example code

Shorten compile time

* chore(rust-toolchain): bump version to nightly-2019-03-23

* chore(pubsub): bump futures-preview and rust-toolchain to 2019-04-16

Bump futures-preview to "0.3.0-alpha.14", also this version fixes
compilation failure on nightly-2019-04-08 and later.

* Revert "chore(pubsub): bump futures-preview and rust-toolchain to 2019-04-16"

Due to "tokio-async-await" compile failure on latest future api changes.

This reverts commit 4d53b0c0eb44fe19158773f5698c72b253481ef6.

* feat(pubsub): allow manually spawn pubsub future task

Now builder will not spawn pubsub by default. Add `fut_task` to
return inner pubsub future.

* chore(pubsub): downgrade rust-toolchain back to 2019-02-27

* fix(pubsub): `fut_task` now returns Future01

* chore(Cargo.lock): fix rebase conflict

* style(pubsub): typo in Cargo.toml

* fix(pubsub): add '#[inline]' attribute

* docs(pubsub): add FIXME on `start_loop` function

`tokio::run` is unreliable for nightly future api.

* chore(pubsub): update Cargo.lock, fix ci

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ members = [
   "core/crypto",
   "core/notify",
   "core/merkle",
+  "core/pubsub",
 
   "components/transaction-pool",
   "components/database",
