feat(runtime): add `Context` struct (#155)
* feat(runtime): add `Context` struct

* style(runtime): minor code style change

consistent code style

* test(runtime): more context test

* chore(runtime): change key parameter type from `String` to `&str`

For easy of use

* chore(runtime): mark `Cloneable` `Send` in Context

Future requires `Send`

* chore(tx-pool): add `Context` to transaction pool api

* chore: add `Context` to `Executor` trait api

* chore: add `Context` to `Database` and `Storage` api

* chore(context): move `Context` to `core-context` crate

* style(context): add `dyn` to `Box<Cloneable>`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ core-runtime = { path = "core/runtime" }
 core-storage = { path = "core/storage" }
 core-types = { path = "core/types" }
 core-consensus = { path = "core/consensus" }
+core-context = { path = "core/context" }
 
 hex = "0.3"
 futures = "0.1"
@@ -42,6 +43,7 @@ members = [
   "core/merkle",
   "core/pubsub",
   "core/network",
+  "core/context",
 
   "components/transaction-pool",
   "components/database",
