refactor: use runtime crate instead of tokio runtime (#160)
* chore(rust-toolchain): bump rust-toolchain to 2019-04-19

* chore(core-p2p): update examples use `runtime` crates

* chore(core-network): use `runtime` crate

* fix(core-serialization): upgrade futures-preview to alpha.14

* chore(storage): remove 'tokio-async-await' dep

* chore(comp-tx-pool): remove 'tokio-async-await' dep

* chore(comp-database): remove 'tokio-async-await' dep

* chore(jsonrpc): remove 'tokio-async-await' dep

* chore(pubsub): update futures-preview to '0.3.0-alpha.14'

* fix(clippy): temporary allow needless_lifetimes rule

* fix(comp-database): resolve futures crate name conflict

* style: cargo format code

* fix: remove unused import

* style(storage): remove 'box_old_fut' macro

* chore: update Cargo.toml

* fix(tx-pool): rebase conflict

--- a/components/database/Cargo.toml
+++ b/components/database/Cargo.toml
@@ -12,8 +12,7 @@ logger = { path = "../../common/logger" }
 
 log = "0.4"
 rocksdb = "0.12.0"
-
-tokio-async-await = { version = "0.1" }
+futures-preview = { version = "0.3.0-alpha.14", features = [ "compat" ] }
 
 [dev-dependencies]
-futures = "0.1"
+futures01 = { package = "futures", version = "0.1" }
