--- a/core/network/Cargo.toml
+++ b/core/network/Cargo.toml
@@ -16,9 +16,13 @@ log = "0.4"
 futures = "0.1"
 prost = "0.5"
 bytes = "0.4"
-tokio = "0.1"
 serde_derive = "1.0"
 serde = "1.0"
+runtime = "0.3.0-alpha.1"
+runtime-raw = "0.3.0-alpha.1"
+runtime-tokio = "0.3.0-alpha.2"
+# TODO: rename futures01 instead
+futures03 = { package = "futures-preview", version = "0.3.0-alpha.14", features = [ "compat" ] }
 
 [dev-dependencies]
 env_logger = "0.6"
