--- a/core/p2p/Cargo.toml
+++ b/core/p2p/Cargo.toml
@@ -17,11 +17,17 @@ parking_lot = "0.7"
 bytes = "0.4"
 prost = { version = "0.5", optional = true }
 rand = "0.6"
+# TODO: rename futures01 instead
+futures03 = { package = "futures-preview", version = "0.3.0-alpha.14", features = [ "compat" ] }
+
 
 # Unfortunately, dev-dependencies cannot be optional.
 [dev-dependencies]
 prost-derive = "0.5"
 tokio = "0.1"
+runtime = "0.3.0-alpha.1"
+runtime-raw = "0.3.0-alpha.1"
+runtime-tokio = "0.3.0-alpha.2"
 
 [features]
 default = []
