--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ config-parser = { path = "common/config-parser" }
 logger = { path = "common/logger" }
 
 # components-cita-jsonrpc = { path = "components/cita-jsonrpc" }
+components-jsonrpc = { path = "components/jsonrpc" }
 components-database = { path = "components/database" }
 components-executor = { path = "components/executor" }
 components-transaction-pool = { path = "components/transaction-pool" }
@@ -25,6 +26,7 @@ futures = "0.1"
 tokio = "0.1"
 clap = "2.32"
 log = "0.4"
+num_cpus = "1.0"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
