--- a/components/jsonrpc/Cargo.toml
+++ b/components/jsonrpc/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "jsonrpc"
+name = "components-jsonrpc"
 version = "0.1.0"
 authors = ["Cryptape Technologies <contact@cryptape.com>"]
 edition = "2018"
@@ -10,11 +10,26 @@ actix-web = "1.0.0-alpha.6"
 old_futures = { package = "futures", version = "0.1" }
 futures-preview = { version = "0.3.0-alpha.14", features = ["compat"] }
 futures-util-preview = { version = "0.3.0-alpha.14" }
-futures-timer = "0.1"
 
+bytes = "0.4"
+hex = "0.3"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 env_logger = "0.6"
 json = "0.11"
 log = "0.4"
+prost = "0.5"
+prost-derive = "0.5"
+numext-fixed-uint = "0.1"
+tiny-keccak = "1.4"
+
+core-context = { path = "../../core/context" }
+core-runtime = { path = "../../core/runtime" }
+core-types = { path = "../../core/types" }
+core-storage = { path = "../../core/storage" }
+core-serialization = { path = "../../core/serialization" }
+core-crypto = { path = "../../core/crypto" }
+
+[build-dependencies]
+prost-build = "0.5"
