refactor(core/consensus): Extract the shared logic to the Engine. (#163)
* refactor(executor): Add execution context

* refactor(transaction-pool): Remove get_batch of "Option<Hash>".

* feat(core/merkle): Add empty hash

* feat(core/types): Add proposal

* refactor(core/consensus): Extract the shared logic to the Engine.

* chore(main): Modify the startup logic to adapt the new consensus interface.

* chore: Update cargo.toml

* cargo clippy

* comment

* Update the return value of "ensure" for the transaction pool.

* Follow the review

* conflict

* filter_map

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,6 @@ core-consensus = { path = "core/consensus" }
 core-context = { path = "core/context" }
 
 hex = "0.3"
-futures = "0.1"
 tokio = "0.1"
 clap = "2.32"
 log = "0.4"
@@ -30,6 +29,8 @@ num_cpus = "1.0"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+futures01 = { package = "futures", version = "0.1" }
+futures-preview = { version = "0.3.0-alpha.14", features = [ "compat" ] }
 
 [workspace]
 members = [
