--- a/core/merkle/Cargo.toml
+++ b/core/merkle/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2018"
 
 [dependencies]
 core-types = { path = "../types" }
-static_merkle_tree = "1.0.0"
+
+# static_merkle_tree = "1.0.0"
+static_merkle_tree = { git = "https://github.com/yejiayu/static-merkle-tree.git", branch = "trait_scope" }
 rlp = "0.3"
