feat(core/consensus): Implements BFT (#158)
* feat(core/consensus): Implements BFT

* update cargo.toml

* print genesis

* remove solo mod for consensus

* ignore self proposal

* save latest proof

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ core-storage = { path = "core/storage" }
 core-types = { path = "core/types" }
 core-consensus = { path = "core/consensus" }
 core-context = { path = "core/context" }
+core-pubsub = { path = "core/pubsub" }
 
 hex = "0.3"
 tokio = "0.1"
