--- a/devtools/chain/config.toml
+++ b/devtools/chain/config.toml
@@ -13,6 +13,8 @@ pool_size = 100000
 until_block_limit = 100
 quota_limit = 9999999999
 
-consensus_mode = "solo"
+# consensus
 consensus_tx_limit = 30000
 consensus_interval = 3000
+consensus_verifier_list = [ "19e49d3efd4e81dc82943ad9791c1916e2229138" ]
+consensus_wal_path = "./devtools/chain/bft_wal"
