connect network component and  tx pool component (#170)
* chore(comp-tx-pool): connect comp-tx-pool and core-network

* fix: clipy warnings

* style: format code using new rustfmt conf

* fix(core-network): wrong handle type

* chore(core-network): remove example message placeholds

* style(core-network): re-order 'use'

* style(core-network): rename generic type parameter name

* style(core-network): remove useless `clone`

* fix(core-network): example network-demo compilation failure

* fix(core-network): remove unused import

* feat(core-network): `PrintInboundReactor` to `LoggerInboundReactor`

Make it middleware

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ core-types = { path = "core/types" }
 core-consensus = { path = "core/consensus" }
 core-context = { path = "core/context" }
 core-pubsub = { path = "core/pubsub" }
+core-network = { path = "core/network" }
 
 hex = "0.3"
 tokio = "0.1"
