--- a/core/consensus/Cargo.toml
+++ b/core/consensus/Cargo.toml
@@ -17,7 +17,7 @@ core-pubsub = { path = "../pubsub" }
 log = "0.4"
 tokio = "0.1"
 old_futures = { package = "futures", version = "0.1" }
-futures-preview = { version = "0.3.0-alpha.14", features = [ "compat" ] }
+futures-preview = { version = "=0.3.0-alpha.14", features = [ "compat" ] }
 bft-rs = { git = "https://github.com/cryptape/bft-rs.git", features = [ "verify_req" ], branch = "v0.3" }
 
 [dev-dependencies]
