--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 futures01 = { package = "futures", version = "0.1" }
-futures-preview = { version = "0.3.0-alpha.14", features = [ "compat" ] }
+futures-preview = { version = "=0.3.0-alpha.14", features = [ "compat" ] }
 
 [workspace]
 members = [
