--- a/components/database/Cargo.toml
+++ b/components/database/Cargo.toml
@@ -12,7 +12,7 @@ logger = { path = "../../common/logger" }
 
 log = "0.4"
 rocksdb = "0.12.0"
-futures-preview = { version = "0.3.0-alpha.14", features = [ "compat" ] }
+futures-preview = { version = "=0.3.0-alpha.14", features = [ "compat" ] }
 
 [dev-dependencies]
 futures01 = { package = "futures", version = "0.1" }
