--- a/core/serialization/Cargo.toml
+++ b/core/serialization/Cargo.toml
@@ -9,7 +9,7 @@ license = "Apache-2.0"
 bytes = "0.4"
 prost = "0.5"
 prost-derive = "0.5"
-futures-preview = { version = "0.3.0-alpha.14" }
+futures-preview = { version = "=0.3.0-alpha.14" }
 
 core-types = { path = "../types" }
 
