--- a/core/storage/Cargo.toml
+++ b/core/storage/Cargo.toml
@@ -12,7 +12,7 @@ core-context = { path = "../context" }
 
 bytes = "0.4"
 old_futures = { package = "futures", version = "0.1" }
-futures-preview = { version = "0.3.0-alpha.14", features = [ "compat" ] }
+futures-preview = { version = "=0.3.0-alpha.14", features = [ "compat" ] }
 byteorder = "1.3"
 
 [dev-dependencies]
