feat(jsonrpc): Implement filter APIs (#190)
* Pause

* Remove all logics into state.rs

* Complete the logic in AppState

* Complete the router

* Update

* Tested filter block

* Fix bug in uninstallFilter

* Update the logic of timeout

* Rename the fields in FilterDatabase

* Add tests

* Fix clippy

* Remove unused codes

* Use try_into instead of into to avoid unwrap()

* Remove unwrap in listening block

* Use except instead of unwrap

* Add alias sendTransaction for sendRawTransaction

--- a/components/jsonrpc/Cargo.toml
+++ b/components/jsonrpc/Cargo.toml
@@ -10,6 +10,7 @@ actix-web = "1.0.0-alpha.6"
 old_futures = { package = "futures", version = "0.1" }
 futures-preview = { version = "=0.3.0-alpha.14", features = ["compat"] }
 futures-util-preview = { version = "=0.3.0-alpha.14" }
+futures-locks = "0.3"
 
 bytes = "0.4"
 ethbloom = "0.6"
@@ -36,6 +37,7 @@ core-pubsub = { path = "../../core/pubsub" }
 core-storage = { path = "../../core/storage" }
 core-serialization = { path = "../../core/serialization" }
 core-crypto = { path = "../../core/crypto" }
+logger = { path = "../../common/logger" }
 
 [build-dependencies]
 prost-build = "0.5"
